--- a/m_welfare.html
+++ b/m_welfare.html
@@ -37,7 +37,7 @@
 		                    </a>
 		                </li>
 		            	<li>
-		                	<a id="/activity/lottery/">
+		                	<a id="html/m_activity_lottery.html">
 		                    	<i class="icon iconfont ic-02"></i>
 		                        <span>积分抽奖</span>
 		                    </a>
