--- a/html/m_baoyou.html
+++ b/html/m_baoyou.html
@@ -64,7 +64,7 @@
 							var wel = data[i];
 							var li = document.createElement('li');
 							li.className = 'mui-table-view-cell';
-							li.innerHTML = '<a target="_blank" data_id="' + wel.id + '" href="' + wel.exp_url + '" class="clearfix"><img src="' + host + wel.picurl +
+							li.innerHTML = '<a data_id="' + wel.id + '" href="' + wel.exp_url + '" class="clearfix"><img src="' + host + wel.picurl +
 								'" /><div class="con-info"><h6>' + wel.title +
 								'</h6><p>' + wel.desc + '</p><div class="c-money">' +
 								'<strong><number>￥' + wel.nprice + '</number></strong>' +
