--- a/html/m_activity_lottery.html
+++ b/html/m_activity_lottery.html
@@ -45,7 +45,7 @@
 		        	<h2>温馨提示</h2>
 		            <p>本次抽奖将消耗您<font><number>10</number>积分</font>！</p>
 		            <div class="btn_cont only-btn">		            	
-		            	<button type="button" class="confirm_lottery mui-btn mui-btn-yellow">确定</button>
+		            	<button id="xxxxx" type="button" class="confirm_lottery mui-btn mui-btn-yellow">确定</button>
 		            </div>
 		        </div>
 		        <span class="btn_x mui-icon mui-icon-closeempty"></span>
@@ -158,6 +158,7 @@
 		  
 		
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/UserInfo.js"></script>
 		<script src="../js/rotate-app.js"></script>
 		<script type="text/javascript" charset="utf-8">
 		     mui.init();
