--- a/account/m_account_change_password.html
+++ b/account/m_account_change_password.html
@@ -35,7 +35,7 @@
 
 		</div>
 		<script src="../js/mui.js"></script>
-		<script src="../js/accounts/user-validate.js"></script>
+		<script src="../js/user-validate.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<script type="text/javascript" charset="utf-8">
 		      	mui.init();
