--- a/account/m_password_reset.html
+++ b/account/m_password_reset.html
@@ -40,7 +40,7 @@
 			</div>
 		</div>
 		<script src="../js/mui.js"></script>
-		<script src="../js/accounts/user-validate.js"></script>
+		<script src="../js/user-validate.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
 				swipeBack:true //启用右滑关闭功能
