--- a/account/m_register.html
+++ b/account/m_register.html
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 		<script src="../js/mui.js"></script>
-		<script src="../js/accounts/user-validate.js"></script>
+		<script src="../js/user-validate.js"></script>
 		<script type="text/javascript">
 	      	mui.init();
 	      	var countdown=60;
