--- a/html/m_detail_welfare.html
+++ b/html/m_detail_welfare.html
@@ -63,9 +63,19 @@
 		  	var exp_url = '';
 		  	var share_msg = {};
 		  	var img = null;
+		  	var tempview = null;
 		  	mui.plusReady(function(){
 		  		self = plus.webview.currentWebview();
+		  		tempview = plus.webview.getWebviewById("temp2");
 		  	});
+		  	function tologin(){
+				plus.nativeUI.showWaiting();
+				tempview.loadURL("../a_login.html");
+				tempview.addEventListener('loaded',function(){
+					plus.nativeUI.closeWaiting();
+					tempview.show("pop-in",350);
+				});
+			}
 			//添加newId自定义事件监听
 			window.addEventListener('display',function(event){
 			  //获得事件参数
@@ -143,20 +153,7 @@
 			});
 			exp_btn_ele.addEventListener('tap', function() {
 				if (!UserInfo.has_login()){
-					mui.openWindow({
-			            url: "../a_login.html",
-			            id:"login",
-			            styles: {
-			                top: 0,
-			                bottom: 0
-			            },
-			            show: {
-			                aniShow: 'slide-in-right',
-			            },
-//			            extras:{
-//			            	backid:self.id
-//			            }
-			        });
+					tologin();
 			        return;
 				}
 				if (type==="hongbao"){
@@ -204,18 +201,7 @@
 		    			        });
 		    				}
 		    				else if(ret.code<0){
-		    					mui.openWindow({
-						            url: "a_login.html",
-						            id:"login",
-						            styles: {
-						                top: 0,
-						                bottom: 0
-						            },
-						            show: {
-						                aniShow: 'slide-in-right',
-						            },
-						        });
-						        return;
+		    					tologin();
 		    				}
 		    				else{
 		    					mui.alert(ret.msg);
